# hackathonII_phase_I

./: .coverage  .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml
.claude/agents/: console-interaction-handler.md  task-state-manager.md  validation-enforcer.md
.specify/memory/: constitution.md
history/prompts/001-todo-console/: 001-write-specification-todo-console.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-generate-implementation-tasks.tasks.prompt.md  004-complete-implementation.green.prompt.md
history/prompts/constitution/: 001-initial-constitution-creation.constitution.prompt.md
specs/001-todo-console/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console/checklists/: requirements.md
specs/001-todo-console/contracts/: README.md  interface_agent_interface.py  state_owner_interface.py  validation_agent_interface.py
src/: main.py
src/agents/: __init__.py  interface_agent.py  state_owner.py  validation_agent.py
src/console/: __init__.py  formatter.py  parser.py
src/domain/: __init__.py  commands.py  models.py  validation.py
tests/integration/: test_add_list.py
tests/unit/: test_formatter.py  test_models.py  test_parser.py  test_state_owner.py  test_validation.py  test_validation_agent.py
